[tool.poetry]
name = "hexlet-code"
version = "0.2.0"
description = "Compares two configuration files and shows a difference"
authors = ["Roman Utolin <romautolin@gmail.com>"]
packages = [
  { include = "gendiff" },
]

[tool.poetry.scripts]
gendiff = "gendiff.cli:get_parser"

[tool.poetry.dependencies]
python = "^3.7"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
